[gd_scene load_steps=14 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://audio/MusicPlayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://vfx/fog_background.material" type="Material" id=3]
[ext_resource path="res://vfx/Fog.gd" type="Script" id=4]
[ext_resource path="res://LevelLoader.gd" type="Script" id=5]
[ext_resource path="res://actors/player/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://vfx/fog_foreground.material" type="Material" id=7]
[ext_resource path="res://vfx/TransitionColor.tscn" type="PackedScene" id=8]
[ext_resource path="res://interface/Interface.gd" type="Script" id=9]
[ext_resource path="res://interface/gui/player/PlayerGUI.tscn" type="PackedScene" id=10]
[ext_resource path="res://interface/menus/shop/ShopMenu.tscn" type="PackedScene" id=11]
[ext_resource path="res://interface/menus/pause/PauseMenu.tscn" type="PackedScene" id=12]
[ext_resource path="res://interface/gui/lifebar/LifebarsBuilder.tscn" type="PackedScene" id=13]

[node name="Game" type="Node" index="0"]

pause_mode = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="MusicPlayer" parent="." index="0" instance=ExtResource( 2 )]

autoplay = true

[node name="Background" type="CanvasLayer" parent="." index="1"]

layer = -100
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="ColorRect" type="ColorRect" parent="Background" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.0625, 0.0549316, 0.0549316, 1 )

[node name="BackgroundFog" type="ColorRect" parent="Background" index="1"]

visible = false
material = ExtResource( 3 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 1 )
script = ExtResource( 4 )
_sections_unfolded = [ "Material" ]

[node name="LevelLoader" type="Node" parent="." index="2"]

pause_mode = 1
script = ExtResource( 5 )
_sections_unfolded = [ "Pause" ]
LEVEL_START = "res://world/levels/TestLevel.tscn"

[node name="Player" parent="LevelLoader" index="0" instance=ExtResource( 6 )]

[node name="Overlays" type="CanvasLayer" parent="." index="3"]

pause_mode = 2
layer = 50
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
_sections_unfolded = [ "Pause" ]

[node name="ForegroundFog" type="ColorRect" parent="Overlays" index="0"]

visible = false
material = ExtResource( 7 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 1 )
script = ExtResource( 4 )
_sections_unfolded = [ "Material" ]

[node name="TransitionColor" parent="Overlays" index="1" instance=ExtResource( 8 )]

[node name="Interface" type="CanvasLayer" parent="." index="4"]

pause_mode = 2
layer = 100
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 9 )
_sections_unfolded = [ "Pause" ]

[node name="PlayerGUI" parent="Interface" index="0" instance=ExtResource( 10 )]

[node name="ShopMenu" parent="Interface" index="1" instance=ExtResource( 11 )]

pause_mode = 2
visible = false
_sections_unfolded = [ "Pause", "Theme" ]

[node name="PauseMenu" parent="Interface" index="2" instance=ExtResource( 12 )]

visible = false
_sections_unfolded = [ "Pause", "Theme" ]

[node name="LifebarsBuilder" parent="Interface" index="3" instance=ExtResource( 13 )]

[connection signal="loaded" from="LevelLoader" to="Background/BackgroundFog" method="_on_LevelLoader_loaded"]

[connection signal="loaded" from="LevelLoader" to="Overlays/ForegroundFog" method="_on_LevelLoader_loaded"]

[connection signal="loaded" from="LevelLoader" to="Interface" method="_on_Level_loaded"]


